# OpenIsles

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile.in  Graphic.cpp  Graphic.h  GraphicsMgr.cpp  GraphicsMgr.h  Makefile  Map.cpp  Map.h  README.md  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
data/ai/: hello-world.lua  simple-ai.lua
data/ai/simple-ai/: buildings.lua  main.lua  streets.lua  utils.lua
data/audio/_src/: Greensleeves.mid
data/config/: carriers.xml  goods.xml  graphics.xml  map-objects.xml  population-tiers.xml  ships.xml  tiles.xml
data/img/tiles/: tiles.txt
data/map/: a-star-test.tmx  benchmark-map.tmx  empty-map.tmx  map-for-add-building-gui.tmx  map.tmx  saved-game.tmx  smallmap.tmx
data/map/isles/: large1.tmx  medium1.tmx  small1.tmx
doc/: anno1602-einzugsbereich.xcf  anno1602-einzugsbereich2.xcf  coord-systems.xcf  count-lines-of-code.sh  drawing-order-x-tiles.xcf  economics-mgr-test.xcf  map-coords.xcf  rendering-order.xcf  taxes-helper.ods
doc/notes/: grafiken.odt  graphics-draft.xml
doc/windows-build/: HOWTO.txt
src/: Graphic.h  GraphicsMgr.cpp  GraphicsMgr.h  Map.cpp  Map.h  main.cpp
src/blender/: common.blend
src/blender/animations/: render-animation.py
src/blender/animations/cart/: render-cart.py
src/blender/buildings/: render-building-with-animation.py  render-building.py
src/blender/carrier/: carrier.blend
src/blender/cart/: cart.blend
src/blender/foresters/: foresters.blend
src/blender/goods/: render.py
src/blender/marketplace/: marketplace.blend  render.py  render.sh
src/blender/pioneers-house1/: pioneers-house1.blend
src/blender/pioneers-house2/: pioneers-house2.blend
src/blender/pioneers-house3/: pioneers-house3.blend
src/blender/pioneers-house4/: pioneers-house4.blend
src/blender/pioneers-house5/: pioneers-house5.blend
src/blender/sheep-farm/: sheep-farm.blend
src/blender/streets/: render-streets.py  streets.blend
src/blender/tiles/: generate-tileset.php  render.py  tiles.blend
src/blender/weaving-mill1/: weaving-mill1.blend
src/cpp/: Context.h  Game.cpp  Game.h  Graphic.cpp  Graphic.h  GraphicsMgr.cpp  GraphicsMgr.h  defines.h  global.h  main.cpp
src/cpp/ai/: AiMgr.cpp  AiMgr.h
src/cpp/api/: api-global.h  game.cpp  misc.cpp  player.cpp
src/cpp/config/: BuildingConfigMgr.cpp  BuildingConfigMgr.h  BuildingCosts.cpp  BuildingCosts.h  ConfigMgr.cpp  ConfigMgr.h  ErrorInConfigException.h  Good.h  MapTileType.h  NeededGood.h
src/cpp/economics/: Carrier.cpp  Carrier.h  EconomicsMgr.cpp  EconomicsMgr.h  InCatchmentAreaFinder.cpp  InCatchmentAreaFinder.h  UpdateableObject.h
src/cpp/game/: CatchmentArea.cpp  CatchmentArea.h  Colony.cpp  Colony.h  ColonyPopulationTier.h  Game.cpp  Game.h  GameIO.cpp  GameIO.h  GoodsSlot.h  Player.cpp  Player.h  PlayerStatus.h  PopulationSatisfaction.h  PopulationTier.h  ProductionSlot.h  ProductionSlots.h
src/cpp/graphics/: Animation.cpp  Animation.h  Graphic.cpp  Graphic.h  GraphicsMgr.cpp  GraphicsMgr.h  MapObjectGraphic.cpp  MapObjectGraphic.h  PlainGraphic.cpp  PlainGraphic.h
src/cpp/gui/: FontMgr.cpp  FontMgr.h  Gui.cpp  GuiAddBuildingWidget.cpp  GuiAddBuildingWidget.h  GuiBase.h  GuiButton.cpp  GuiButton.h  GuiColonyGoodsWidget.cpp  GuiColonyGoodsWidget.h  GuiMgr.cpp  GuiMgr.h  GuiPushButton.cpp  GuiPushButton.h  GuiSelectedBuildingWidget.cpp  GuiSelectedBuildingWidget.h  GuiStaticElement.cpp  GuiStaticElement.h  GuiUtils.cpp  GuiUtils.h  Identifiers.h
src/cpp/i18n/: LanguageMgr.cpp  LanguageMgr.h
src/cpp/map/: Building.cpp  Building.h  Direction.cpp  Direction.h  Directions.cpp  Directions.h  DrawingOrderGraph.cpp  DrawingOrderGraph.h  DrawingOrderer.cpp  DrawingOrderer.h  Harvestable.cpp  Harvestable.h  Isle.cpp  Isle.h  Map.cpp  Map.h  MapCoordUtils.cpp  MapCoordUtils.h  MapObject.cpp  MapObject.h  MapObjectType.h  MapObjectUtils.cpp  MapObjectUtils.h  MapUtils.cpp  MapUtils.h  Ship.cpp  Ship.h  Street.cpp  Street.h  Structure.cpp  Structure.h  StructureType.h  UpdateableObject.h
src/cpp/pathfinding/: AStar.cpp  AStar.h
src/cpp/sound/: ISoundMgr.h  SoundMgr.cpp  SoundMgr.h
src/cpp/utils/: CatchmentAreaIterator.cpp  CatchmentAreaIterator.h  Color.cpp  Color.h  Consts.cpp  Consts.h  DoubleToIntSequence.h  Events.h  FpsCounter.h  Log.h  Lua.cpp  Lua.h  MapCoordsIterator.h  PerformanceCounter.h  RandomEngine.h  Rect.h  RectangleData.h  StringFormat.cpp  StringFormat.h  Ticks.cpp  Ticks.h
src/gui/: Gui.h
src/map/: Building.cpp  Building.h  Map.cpp  Map.h  MapObject.h  Structure.h
src/mid/: Greensleeves.mid
src/php/: generate-build-buttons.php  get-tile-for-makefile.php
src/po/: CMakeLists.txt  data-xmls-to-pot.php  de.po  en.po
src/psd/: add-building-panel.psd  marble-panels.psd  panel-header.psd
src/sound/: SoundMgr.cpp  SoundMgr.h
src/xcf/: button-add-building.xcf  button-build.xcf  button-dummy.xcf  button-music.xcf  debug-grid-overlay.xcf  plain-tile.xcf  testbutton.xcf  tileset-src.xcf
src/xcf/goods/: marketplace-icon-background.xcf
test/: test.cpp
test/cpp/: GameTest.cpp  GameTest.h
test/cpp/ai/: AiGameTest.h  HelloWorldAiTest.cpp
test/cpp/config/: ConfigMgrTest.cpp
test/cpp/economics/: CarrierSheepTest.cpp  CarrierTest.cpp  CarrierWalkingTest.cpp  EconomicsMgrTest.cpp  FinancesTest.cpp  FoodConsumptionTest.cpp  HousesTest.cpp  HousesTest_Advancement.cpp  HousesTest_IncreasingInhabitants.cpp  InCatchmentAreaFinderGoodsPriorityTest.cpp  InCatchmentAreaFinderInvisibleGoodsTest.cpp  MaxCarriersAndCarrierDelayTest.cpp
test/cpp/game/: CatchmentAreaTest.cpp  PlayerStatusTest.cpp
test/cpp/graphics/: GraphicSetTest.cpp
test/cpp/map/: BuildingTest.cpp  DirectionTest.cpp  DirectionsTest.cpp  HarvestableTest.cpp  MapCoordUtilsTest.cpp
test/cpp/utils/: CatchmentAreaIteratorTest.cpp  DoubleToIntSequenceTest.cpp  MapCoordsIteratorTest.cpp  RandomEngineTest.cpp
test/data/config-with-parse-errors/: carriers.xml  goods.xml  map-objects.xml  population-tiers.xml  ships.xml  tiles.xml
test/data/map/: buildqueue-testmap.tmx  test-map.tmx
(+227 files in other folders)
